[gd_scene load_steps=3 format=3 uid="uid://dcrno1pu7joro"]

[ext_resource type="Texture2D" uid="uid://b4id8oqkcdsl0" path="res://textures/game/tex_game_card.png" id="1_05b0s"]
[ext_resource type="Script" path="res://scripts/game/scr_game_card.gd" id="1_7p6xr"]

[node name="GameCard" type="Node2D"]
script = ExtResource("1_7p6xr")

[node name="Rig" type="Node2D" parent="."]

[node name="Sprite2D_Back" type="Sprite2D" parent="Rig"]
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_05b0s")

[node name="Sprite2D_Art" type="Sprite2D" parent="Rig"]

[node name="Label_Damage" type="Label" parent="Rig"]
offset_left = -45.0
offset_top = -67.0
offset_right = -20.0
offset_bottom = -42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Buildup" type="Label" parent="Rig"]
offset_left = 20.0
offset_top = -67.0
offset_right = 45.0
offset_bottom = -42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
